<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/more"
        app:showAsAction="ifRoom"
        android:title="@string/more"
        android:icon="@drawable/ic_more">

        <menu>
            <group>
                <item android:id="@+id/edit"
                android:title="@string/edit"
                app:showAsAction="ifRoom"/>

                <item android:id="@+id/copy"
                    android:title="@string/copy"
                    app:showAsAction="ifRoom"/>

                <item android:id="@+id/delete"
                    android:title="@string/delete"
                    app:showAsAction="ifRoom"/>
            </group>
        </menu>
    </item>



</menu>