<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".fragment.ContentFragment"
    android:background="@color/white">


    <!--toolbar-->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/layout_appBar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/blue_4">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="我与地坛"
            app:titleCollapseMode="scale">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="top"

                app:popupTheme="@style/OverflowMenuStyle"
                app:menu="@menu/menu_content_toolbar"
                app:layout_scrollFlags="scroll"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_test"/>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_backToTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:visibility="gone"
        android:backgroundTint="@color/blue_4"
        android:contentDescription="@string/back_to_the_top"
        android:src="@drawable/ic_upward"
        android:layout_gravity="bottom|start" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:backgroundTint="@color/blue_4"
        android:contentDescription="@string/comment"
        android:src="@drawable/ic_comment"
        android:layout_gravity="bottom|end" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>